# ufc-eda-veb

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SPEC.md
src/: main.cpp
src/core/: htbl.h  veb.h
src/io/: arg_parser.h  executor.h  file_parser.h  file_writer.h  operacao.h  utils.h
src/testes/: CMakeLists.txt  arg_parser_test.cpp  executor_test.cpp  file_parser_test.cpp  file_writer_test.cpp  veb_test.cpp
